Fix firefox text-align on offline component

--- a/src/popup/components/Offline/style.less
+++ b/src/popup/components/Offline/style.less
@@ -1,11 +1,11 @@
 .block {
     padding: 20px 10px;
-    text-align: center;
     color: grey;
 }
 
 .logo {
     margin: 20px auto;
+    text-align: center;
 
     img {
         width: 70px;
@@ -16,6 +16,11 @@
 
 .offline {
     margin: 0 0 30px 0;
+    text-align: center;
+}
+
+.links {
+    text-align: center;
 }
 
 .link {
